# Fish-Tracking-Visualization

./: .flake8  .gitignore  .pre-commit-config.yaml  BehaviourMapper.ipynb  CITATION.cff  MANIFEST.in  Metrics.ipynb  README.md  Trajectory-Visualisation.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  hpc_berman.py  hpc_clustering.py  log-path-validation.txt  log_tra.txt  main.py  methods.c  methods.html  methods.pyx  missing_tracks_afternoon_block2_include_when_retracking.txt  path_validation.py  pyproject.toml  quick-routines.txt  requirements.txt  setup.py  test_trajectory.py
data/: DevEx_FE_feeding_times.csv  DevEx_fingerprint_activity_lifehistory.csv  DevEx_fingerprint_activity_lifehistory_update.csv  block1_area_data.json  block1_calibration.json  block2_area_data20211102_060000.json  block2_area_data20211121_060000.json  block2_calibration20211102_060000.json  block2_calibration20211121_060000.json  feeding_patch_coords.csv  recordings_feeding_times_template.csv
fishproviz/: __init__.py  config.py  config_example.txt  default_config.env  methods.pyx  path_validation.py
scripts/: build-analytics.sh  build-clustering.sh  build-comparing.sh  build-trajectories.sh  config.sh  entropy_density.sh  env.default.sh  env.sh  hpc-berman.sh  hpc-python.sh  metrics.sh  run_tests.sh
src/: activity_plotting.py  clustering.py  config.py  error_filter.py  feeding.py  global_calculations.py  hpc_clustering.py  methods.c  methods.pyx  metrics.py  preprocessing_helpers.py  tank_area_config.py  transformation.py  transitions_cluster.py  tsne_plotting.py  utile.py  visualisation.py
tests/: array_for_test.py  run_tests.sh  test_metrics.py  test_trajectory.py
tex/: .gitignore  analytics.tex  build-trajectories.sh  (+7 more)
(+195 files in other folders)
