[build-system]
requires = ["setuptools==65.6.3", "Cython==0.29.34", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fishproviz"
version = "0.2"
description = "A package to analyze trajectories"
authors = [{ name = "Luka Stärk", email = "luka.staerk@mailbox.org" }]
requires-python = ">=3.10"
dependencies = [
    "matplotlib~=3.9.0",
    "numpy==1.24.2",
    "pandas~=2.2.2",
    "plotly==5.0.0",
    "scikit_learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.11.1",
    "tqdm==4.65.0",
    "python-dotenv~=1.2.1",
]

[tool.black]
line-length = 227
target-version = ["py310"]
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.eggs
    | \.pytest_cache
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
