[build-system]
requires = ["setuptools>=70.0.0", "Cython==0.29.34", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fishproviz"
version = "0.2"
description = "A package to analyze trajectories"
authors = [{ name = "Luka Stärk", email = "luka.staerk@mailbox.org" }]
requires-python = ">=3.10"
dependencies = [
    "matplotlib~=3.9.0",
    "numpy==1.24.2",
    "pandas~=2.2.2",
    "plotly==5.0.0",
    "scipy==1.10.1",
    "seaborn==0.11.1",
    "tqdm>=4.66.3",
    "python-dotenv~=1.2.1",
]

[tool.black]
line-length = 227
target-version = ["py310"]
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.eggs
    | \.pytest_cache
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: full-pipeline tests against sample data (run manually, not in pre-commit)",
]
